# anki-parser

./: .gitignore  README.md  ai_assist.py  anki_export.py  app.py  card.py  cli.py  parser.py  pyproject.toml
tests/: test_booklet_shuffle.py  test_parser.py
